# ti

./: CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  main.yml  release-plz.yml  release.yml
fonts/: ANSI_Mono.flf
src/: args.rs  cache.rs  font.rs  interface.rs  main.rs  timer.rs
wix/: main.wxs
