[package]
name = "ti"
version = "1.3.0"
authors = ["Michał Czyż <mike@c2yz.com>"]
edition = "2021"

description = "A simple terminal timer"
homepage = "https://github.com/eRgo35/ti"
repository = "https://github.com/eRgo35/ti"
documentation = "https://github.com/eRgo35/ti"
keywords = ["timer", "terminal", "tty", "rust", "figlet"]
license = "MIT"
readme = "README.md"

[package.metadata.wix]
upgrade-guid = "D47D5FC0-4E43-4FAF-98C7-7DE1D67AA506"
path-guid = "F2A1781C-8F7C-487C-B81D-21327847665E"
license = false
eula = false

[dependencies]
clap = { version = "4.5.14", features = ["derive"] }
crossterm = "0.28.1"
figlet-rs = "0.1.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.20.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
